# ccevents

./: .gdbinit  .travis.yml  ANNOUNCE  Makefile.am  README  README.md  TODO.org  configure.ac
demos/: processes-communicating-through-pipes.c
doc/: ccevents.texi  macros.texi
meta/scripts/: ccevents.pc.in
meta/slackware/: slack-desc.in
meta/travis-ci/: install-ccexceptions.sh
src/: ccevents-conditions.c  ccevents-core.c  ccevents-debug.h  ccevents-fd-sources.c  ccevents-groups.c  ccevents-internals.h  ccevents-loops.c  ccevents-queues.c  ccevents-signal-sources.c  ccevents-sources-base.c  ccevents-sources-fd.c  ccevents-sources-signal.c  ccevents-sources-task.c  ccevents-sources-timer.c  ccevents-sources.c  ccevents-task-sources.c  ccevents-timeouts.c  ccevents-timer-sources.c  ccevents-timevals.c  ccevents-version.c  ccevents.h
tests/: base-sources.c  groups.c  loops.c  main-loop.c  signal-sources.c  standalone-fd-sources.c  task-sources.c  timeouts.c  timer-sources.c  timevals.c  version.c
